--- a/.env.local
+++ b/.env.local
@@ -1,1 +1,2 @@
-NEXT_PUBLIC_SERVER='http://192.168.0.229:5000'
+NEXT_PUBLIC_SERVER=https://zany-jade-beaver.cyclic.app
+NEXT_PUBLIC_SERVER_OLD=http://192.168.0.229:5000
